fix: adjust navigation position in slider for better alignment

--- a/public/assets/scss/layout/pages/_slider.scss
+++ b/public/assets/scss/layout/pages/_slider.scss
@@ -835,7 +835,7 @@
     &-nav{
         position: absolute;
         bottom: 10%;
-        left: 18.3%;
+        left: 25.3%;
         z-index: 1;
         width: 150px;
         height: 180px;
